<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/circle_view"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:elevation="0dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@color/orange" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/unblast"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/circle_view"
        app:layout_constraintTop_toTopOf="@id/circle_view" />

    <TextView
        android:id="@+id/hour_ago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_2_hrs"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/circle_view"
        app:layout_constraintStart_toEndOf="@id/circle_view" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/point"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/circle_view"
        app:layout_constraintStart_toEndOf="@id/hour_ago" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/img_public"
        app:layout_constraintBottom_toBottomOf="@id/point"
        app:layout_constraintStart_toEndOf="@id/point" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="@id/circle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/circle_view" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/buckle_up_because_change_coming_to_wardpress"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/circle_view"
        app:layout_constraintTop_toBottomOf="@id/circle_view" />

    <TextView
        android:id="@+id/link_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/http_unblast_com_color_schemes"
        android:textColor="@color/Blue"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/circle_view"
        app:layout_constraintTop_toBottomOf="@id/content_text" />

    <ImageView
        android:id="@+id/image_post"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="15dp"
        android:src="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_text" />

    <ImageView
        android:id="@+id/likes_num"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_post" />

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/_12"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/likes_num"
        app:layout_constraintStart_toEndOf="@id/likes_num"
        app:layout_constraintTop_toTopOf="@id/likes_num" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/_1_share"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/likes_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_post"
        app:layout_constraintTop_toTopOf="@id/likes_num" />

    <View
        android:id="@+id/cut_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/likes_num" />

    <ImageView
        android:id="@+id/like_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cut_line" />

    <TextView
        android:id="@+id/like_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/like"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/like_icon"
        app:layout_constraintStart_toEndOf="@id/like_icon"
        app:layout_constraintTop_toTopOf="@id/like_icon" />

    <ImageView
        android:id="@+id/Comment_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_comment"
        app:layout_constraintStart_toEndOf="@id/like_tv"
        app:layout_constraintTop_toBottomOf="@id/cut_line" />

    <TextView
        android:id="@+id/comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/comment"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/Comment_icon"
        app:layout_constraintStart_toEndOf="@id/Comment_icon"
        app:layout_constraintTop_toBottomOf="@id/cut_line"
        app:layout_constraintTop_toTopOf="@id/Comment_icon" />

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_share"
        app:layout_constraintStart_toEndOf="@id/comment_tv"
        app:layout_constraintTop_toBottomOf="@id/cut_line" />

    <TextView
        android:id="@+id/share_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/share"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/share_icon"
        app:layout_constraintStart_toEndOf="@id/share_icon"
        app:layout_constraintTop_toBottomOf="@id/cut_line"
        app:layout_constraintTop_toTopOf="@id/share_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>
